--- a/src/main/res/layout/layout_buy_diamond.xml
+++ b/src/main/res/layout/layout_buy_diamond.xml
@@ -4,20 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/shape_rounded_white"
-    android:paddingBottom="@dimen/dimen_20dp"
+    android:paddingBottom="@dimen/dimen_10dp"
     android:orientation="vertical">
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvContent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:gravity="center"
-        android:padding="@dimen/dimen_20dp"
-        android:text="Buy Coins"
-        android:textAllCaps="true"
-        android:textSize="@dimen/dimen_18sp"/>
 
 
     <LinearLayout
@@ -26,14 +14,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/border_orange_radius"
-        android:layout_marginTop="@dimen/dimen_20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvContent"
+        android:layout_marginTop="@dimen/dimen_5dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/btnOk"
         android:gravity="center"
         android:layout_marginLeft="@dimen/dimen_10dp"
         android:layout_marginRight="@dimen/dimen_5dp"
-        android:paddingBottom="70dp"
+        android:paddingBottom="50dp"
         android:paddingTop="@dimen/dimen_30dp">
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
@@ -77,14 +65,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/border_orange_radius"
-        android:layout_marginTop="@dimen/dimen_20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvContent"
+        android:layout_marginTop="@dimen/dimen_5dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/btnClose"
         android:gravity="center"
         android:layout_marginRight="@dimen/dimen_10dp"
         android:layout_marginLeft="@dimen/dimen_5dp"
-        android:paddingBottom="70dp">
+        android:paddingBottom="50dp">
 
         <TextView
             android:layout_width="100dp"
@@ -167,8 +155,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv01"
+        android:textColor="@color/black"
         android:text="@android:string/cancel"
         android:textAllCaps="true"
         android:textSize="@dimen/dimen_16sp"
-        android:layout_marginTop="@dimen/dimen_30dp"/>
+        android:layout_marginTop="@dimen/dimen_10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
